--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>12247058B</title>
+        <title>p5jsExibition</title>
         <style>
             * { 
                 margin: 0;
