--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>p5jsExibition</title>
+        <title>12247058B</title>
         <style>
             * { 
                 margin: 0;
@@ -35,9 +35,9 @@
         </nav>
     
         <div id="popup">
-            <h2 class="title">星</h2>
+            <h2 class="title">ケセランパサラン</h2>
             <p class="name">松本英士</p>
-            <p class="description">指で触ると集まってきます。エージェントの子要素としてパーティクルがあります。</p>
+            <p class="description">江戸時代以降の民間伝承上の謎の生物とされる物体</p>
             <div id="close"><a href="#">&times;</a></div>
         </div>
     </body>
